--- a/styles/index.css
+++ b/styles/index.css
@@ -25,10 +25,8 @@ body {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background-image: url("/images/pattern-background-desktop.svg");
-  background-repeat: no-repeat;
-  background-position: top;
-  background-color: var(--Pale-blue);
+  background: url(../images/pattern-background-desktop.svg) no-repeat, #E1E9Ff;
+  background-size: contain;
 }
 
 main {
